# pydantic-ai-assignment

./: README.md
Ecommerce/: .env  .gitignore  .sesskey  README.md  agent.py  ecommerce_agent_app.py  main.py  tools.py  ui.py
ResearchAgent/: .gitignore  README.md  pyproject.toml  research_agent.py
